# models/product.go
@@ -7,16 +7,17 @@ import (
 type Product struct {
 	Model
 
-	Name             string           `gorm:"name"                                   json:"name"`
-	Code             string           `gorm:"code"                                   json:"code"`
-	BrandID          uuid.UUID        `gorm:"brand_id"                               json:"brandId"`
-	Brand            Brand            `gorm:"foreignKey:brand_id; references:id;"    json:"brand"`
-	Files            []ProductFileMap `gorm:"foreignKey:product_id; references:id;"  json:"files"`
-	ProductItems     []ProductItem    `gorm:"foreignKey:product_id; references:id;"  json:"productItems"`
-	CategoryID       uuid.UUID        `gorm:"category_id"                            json:"categoryId"`
-	Category         Category         `gorm:"foreignKey:category_id; references:id;" json:"category"`
-	Description      string           `gorm:"description"                            json:"description"`
-	ShortDescription string           `gorm:"short_description"                      json:"shortDescription"`
+	Name                 string           `gorm:"name"                                   json:"name"`
+	Code                 string           `gorm:"code"                                   json:"code"`
+	BrandID              uuid.UUID        `gorm:"brand_id"                               json:"brandId"`
+	Brand                Brand            `gorm:"foreignKey:brand_id; references:id;"    json:"brand"`
+	Files                []ProductFileMap `gorm:"foreignKey:product_id; references:id;"  json:"files"`
+	ProductItems         []ProductItem    `gorm:"foreignKey:product_id; references:id;"  json:"productItems"`
+	CategoryID           uuid.UUID        `gorm:"category_id"                            json:"categoryId"`
+	Category             Category         `gorm:"foreignKey:category_id; references:id;" json:"category"`
+	Description          string           `gorm:"description"                            json:"description"`
+	ShortDescription     string           `gorm:"short_description"                      json:"shortDescription"`
+	DefaultProductItemID *uuid.UUID       `gorm:"default_product_item_id"                json:"defaultProductItemId"`
 }
 
 func (Product) TableName() string {
