# models/product_item.go
@@ -5,13 +5,15 @@ import "github.com/google/uuid"
 type ProductItem struct {
 	Model
 
-	Price      float64       `gorm:"price"                                    json:"price"`
-	Status     ProductStatus `gorm:"status"                                   json:"status"`
-	ColorID    uuid.UUID     `gorm:"color_id"                                 json:"colorId"`
-	Color      Color         `gorm:"foreignKey:color_id; references:id;"      json:"color"`
-	ProductID  uuid.UUID     `gorm:"product_id"                               json:"productId"`
-	Product    Product       `gorm:"foreignKey:product_id; references:id;"    json:"product"`
-	OrderItems []OrderItem   `gorm:"foreignKey:product_item_id;references:id" json:"items"`
+	Price          float64       `gorm:"price"                                    json:"price"`
+	Status         ProductStatus `gorm:"status"                                   json:"status"`
+	ColorID        uuid.UUID     `gorm:"color_id"                                 json:"colorId"`
+	Color          Color         `gorm:"foreignKey:color_id; references:id;"      json:"color"`
+	ProductID      uuid.UUID     `gorm:"product_id"                               json:"productId"`
+	Product        Product       `gorm:"foreignKey:product_id; references:id;"    json:"product"`
+	Quantity       int           `gorm:"quantity"                                 json:"quantity"`
+	BoughtQuantity int           `gorm:"bought_quantity"                          json:"boughtQuantity"`
+	OrderItems     []OrderItem   `gorm:"foreignKey:product_item_id;references:id" json:"items"`
 }
 
 func (ProductItem) TableName() string {
